# Neeva

./: .gitignore  README.md
backend/: check_db_schema.py  debug_import.py  main.py  pyproject.toml  reproduce_chat_error.py  requirements.txt  test_ai_service.py  test_db_connection.py  test_registration.py  trigger_registration_error.py
backend/alembic/: env.py
backend/alembic/versions/: 1d0c0995693c_initial_migration.py  bfa5f73d8589_add_onboarding_fields.py
backend/app/api/: api.py  deps.py
backend/app/api/endpoints/: auth.py  chat.py  community.py  exercises.py  mood.py  users.py
backend/app/core/: security.py
backend/app/middleware/: error_logging.py
backend/app/models/: __init__.py  models.py
backend/app/schemas/: __init__.py  chat.py  community.py  exercises.py  mood.py  user.py
backend/app/services/: ai.py
frontend/: download_audio.py  package-lock.json  package.json  vercel.json
frontend/public/audio/: README.md
frontend/src/: App.tsx  index.css
frontend/src/components/: CircularText.tsx  Layout.tsx  NotificationManager.tsx  OnboardingModal.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Chat.tsx  Crisis.tsx  Dashboard.tsx  Login.tsx  Mood.tsx  Register.tsx  Settings.tsx  Wellness.tsx  WellnessGames.tsx
